fix archdec 2 on mobile

--- a/content/products/archdec-2/style_archdec_2.css
+++ b/content/products/archdec-2/style_archdec_2.css
@@ -3,3 +3,9 @@
 	--theme: var(--archdec_2);
 	--img: var(--archdec_2-img);
 }
+
+
+/* Content */
+.column img {
+	width: 100%;
+}
